--- a/ecom/templates/macros/navbar.html
+++ b/ecom/templates/macros/navbar.html
@@ -55,6 +55,9 @@
         <i class="fas fa-heart text-primary"></i>
         <span class="badge">0</span>
       </a>
+      <a href="{{ url_for('pages.orders_listing') }}" class="btn border">
+        <i class="fa-solid fa-list text-primary"></i>
+      </a>
       <a href="{{ url_for('pages.cart') }}" class="btn border">
         <i class="fas fa-shopping-cart text-primary"></i>
         <span class="badge">{{ num_cart_item }}</span>
