--- a/ecom/templates/shop.html
+++ b/ecom/templates/shop.html
@@ -180,7 +180,7 @@
                             </div>
                             <div class="card-footer d-flex justify-content-between bg-light border">
                                 <a href="{{ url_for('pages.product_detail', _id = product['_id']) }}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                                <form method="post"><button type="submit" class="btn btn-sm text-dark p-0" name="btn" value="{{ product['_id']|string }}"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</button></form>
                             </div>
                         </div>
                     </div>
