--- a/ecom/templates/checkout.html
+++ b/ecom/templates/checkout.html
@@ -20,10 +20,10 @@
                         Quantity: {{ product['quantity'] }}
                     </div>
                     <div class="row">
-                        Price per one item: {{ product['price'] }} đ
+                        Price per one item: {{ product['price_display'] }} đ
                     </div>
                     <div class="row">
-                        Value for this product: {{ product['total_value'] }} đ
+                        Value for this product: {{ product['total_value_display'] }} đ
                     </div>
                 </div>
             </div>
