decrease stocks when order, not show oos products, initialize stocks management

--- a/ecom/templates/detail.html
+++ b/ecom/templates/detail.html
@@ -53,6 +53,7 @@
                     <small class="pt-1">(50 Reviews)</small>
                 </div>
                 <h3 class="font-weight-semi-bold mb-4">{{ product["price_display"] }} đ</h3>
+                {% if product["stocks"] > 0 %}
                 <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit clita ea. Sanc invidunt ipsum et, labore clita lorem magna lorem ut. Erat lorem duo dolor no sea nonumy. Accus labore stet, est lorem sit diam sea et justo, amet at lorem et eirmod ipsum diam et rebum kasd rebum.</p>
                 <form method="post" class="d-flex align-items-center mb-4 pt-2">
                     {{ form.hidden_tag() }}
@@ -61,6 +62,10 @@
                     </div>
                     {{ form.submit(class_="btn btn-primary px-3")}}
                 </form>
+                <p>Stocks: {{ product["stocks"] }}</p>
+                {% else %}
+                <p style="color: red;">Out of stock</p>
+                {% endif %}
 
                 <div class="d-flex pt-2">
                     <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
