--- a/ecom/templates/login.html
+++ b/ecom/templates/login.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
 
-    <form name="login" method="post" novalidate class="form">
+    <form name="login" method="post" novalidate class="form container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {%- for category, message in messages %}
                 <span class="form__flash form__flash--{{category}}"> {{ message }}</span>
