--- a/ecom/templates/seller_layout.html
+++ b/ecom/templates/seller_layout.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" aria-current="page" href="#">Sales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Stocks</a>
+                <a class="nav-link" href="{{ url_for('pages.seller_stocks') }}">Stocks</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('pages.seller_add_products') }}">Add products</a>
