--- a/ecom/templates/seller_layout.html
+++ b/ecom/templates/seller_layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title | default('Seller Center') }}</title>
     <script src="https://cdn.tiny.cloud/1/6w600tqk4zw7dwczm89a906hyeewc8bctzerhtiret2nm6so/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/seller_style.css') }}">
 </head>
