add edit, add img, remove img

--- a/ecom/templates/macros/navbar.html
+++ b/ecom/templates/macros/navbar.html
@@ -9,6 +9,8 @@
         <a class="text-dark" href="">Help</a>
         <span class="text-muted px-2">|</span>
         <a class="text-dark" href="">Support</a>
+        <span class="text-muted px-2">|</span>
+        <a class="text-dark" href="{{ url_for('pages.seller_index') }}">Switch to Seller Center</a>
       </div>
     </div>
     <div class="col-lg-6 text-center text-lg-right">
