--- a/ecom/static/css/seller_style.css
+++ b/ecom/static/css/seller_style.css
@@ -75,3 +75,23 @@ button > a {
     font: inherit;
     text-decoration: none;
 }
+
+.pagination-page-info {
+    padding: .6em;
+    padding-left: 0;
+    width: 40em;
+    margin: .5em;
+    margin-left: 0;
+    font-size: 12px;
+}
+.pagination-page-info b {
+    color: black;
+    background: #6aa6ed;
+    padding-left: 2px;
+    padding: .1em .25em;
+    font-size: 150%;
+}
+
+.stocks_listing {
+    font-size: 0.9rem;
+}
