--- a/ecom/templates/seller_layout.html
+++ b/ecom/templates/seller_layout.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('pages.seller_add_products') }}">Add products</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('pages.index') }}">Switch to Customer</a>
+              </li>
             </ul>
             {% if not session.get("email") %}
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
