--- a/ecom/templates/seller_stocks.html
+++ b/ecom/templates/seller_stocks.html
@@ -1,8 +1,21 @@
 {% extends "seller_layout.html" %}
 
 {% block main_content %}
+{{ pagination.links }}
+{{ pagination.info }}
 
-<table class="table table-striped table-hover">
+<form action="" method="post">
+    Products per page:
+    <select name="per_page" id="" onchange='if(this.value != 0) { this.form.submit(); }'>
+        <option value="0">Choose one</option>
+        <option value="10">10</option>
+        <option value="25">25</option>
+        <option value="50">50</option>
+        <option value="100">100</option>
+    </select>
+</form>
+
+<table class="table table-striped table-hover stocks_listing">
     <thead>
         <th scope = "col">#</th>
         <th scope = "col">Name</th>
@@ -18,17 +31,17 @@
     <tbody>
         {% for product in list_products %}
         <tr>
-            <td scope = "row">#</td>
-            <td><a href="{{ url_for('pages.product_detail', _id = product['_id']) }}">{{ product["product_name"] }}</a></td>
+            <td scope = "row">{{ loop.index + (page - 1) * per_page }}</td>
+            <td><a href="{{ url_for('pages.product_detail', _id = product['_id']) }}">{{ product["product_name"] | truncate(75,True) }}</a></td>
             <td>{{ product["cate_report"] }}</td>
             <td>{{ product["sub_cate_report"] }}</td>
             <td>{{ product.get("brand") }}</td>
-            <td style="text-align: right;">{{ "%.f đ"|format(product.get("price")) }}</td>
+            <td style="text-align: right;">{{ product.get("price") }}</td>
             <td style="text-align: center;">{{ product.get("stocks") }}</td>
             <td>{% if product.get("listed") == 1 %}
-                Listed <a class="btn btn-danger" href="{{ url_for('pages.seller_toggle_listed' , _id = product['_id']) }}">Unlist</a>
+                <span style="color: green;">Listed</span> <a style="max-height: 2em; font-size: 1em;" class="btn btn-danger" href="{{ url_for('pages.seller_toggle_listed' , _id = product['_id']) }}">Unlist</a>
                 {% else %}
-                Unlisted <a class="btn btn-success" href="{{ url_for('pages.seller_toggle_listed' , _id = product['_id']) }}">List</a>
+                <span style="color: red;">Unisted</span> <a style="max-height: 2em; font-size: 1em;" class="btn btn-success" href="{{ url_for('pages.seller_toggle_listed' , _id = product['_id']) }}">List</a>
                 {% endif %}
             </td>
             <td><a href="{{ url_for('pages.seller_edit_products', _id = product['_id']) }}"><i class="fas fa-edit"></i></a></td>
@@ -36,7 +49,8 @@
         </tr>
         {% endfor %}
     </tbody>
-
 </table>
-    
+{{ pagination.links }}
+
+
 {% endblock %}
