--- a/ecom/templates/shop.html
+++ b/ecom/templates/shop.html
@@ -166,6 +166,9 @@
                             </div>
                         </div>
                     </div>
+
+                    {{ pagination.links }}
+                    {{ pagination.info }}
                     {% for product in list_product %}
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="card product-item border-0 mb-4">
@@ -185,27 +188,7 @@
                         </div>
                     </div>
                     {% endfor %}
-                    <div class="col-12 pb-1">
-                        <nav aria-label="Page navigation">
-                          <ul class="pagination justify-content-center mb-3">
-                            <li class="page-item disabled">
-                              <a class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                                <span class="sr-only">Previous</span>
-                              </a>
-                            </li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                              <a class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                                <span class="sr-only">Next</span>
-                              </a>
-                            </li>
-                          </ul>
-                        </nav>
-                    </div>
+                    {{ pagination.links }}
                 </div>
             </div>
             <!-- Shop Product End -->
