--- a/ecom/templates/seller_layout.html
+++ b/ecom/templates/seller_layout.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Sales</a>
+                <a class="nav-link" aria-current="page" href="{{ url_for('pages.seller_sales') }}">Sales</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('pages.seller_stocks') }}">Stocks</a>
