add sort by in listing

--- a/ecom/templates/shop.html
+++ b/ecom/templates/shop.html
@@ -139,15 +139,13 @@
                                 </div>
                             </form>
                             <div class="dropdown ml-4">
-                                <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                            Sort by
-                                        </button>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
-                                    <a class="dropdown-item" href="#">Latest</a>
-                                    <a class="dropdown-item" href="#">Popularity</a>
-                                    <a class="dropdown-item" href="#">Best Rating</a>
-                                </div>
+                                <form action="">
+                                    <select name="sort_by" id="" onchange='if(this.value != 0) { this.form.submit(); }'>
+                                        <option value="0">Sort by</option>
+                                        <option value="price">Price</option>
+                                        <option value="name">Product name</option>
+                                    </select>
+                                </form>
                             </div>
                         </div>
                     </div>
